// {C} Copyright 2019 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package diagnostics;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "tenant.proto";
import "module.proto";

service DiagnosticsV1 {

    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "diagnostics";
    // API Version.
    option (venice.apiVersion) = "v1";

    option (venice.apiGrpcCrudService) = "Module";

    option (venice.apiRestService) = {
        Object: "Module"
        Method: [ "get", "put", "list", "watch"]
    };
    // Action to request diagnostic information
    option (venice.apiAction) = {
        Object: "Module"
        Action: "Debug"
        Request: "DiagnosticsRequest"
        Response: "DiagnosticsResponse"
        Desc: "Request Diagnostics information for a module"
    };
}